Apache Tez Change Log
=====================

Release 0.7.1: Unreleased

INCOMPATIBLE CHANGES

ALL CHANGES
  TEZ-2866. Tez UI: Newly added columns wont be displayed by default in tables
  TEZ-2885. Remove counter logs from AMWebController.
  TEZ-2887. Tez build failure due to missing dependency in pom files.
  TEZ-2096. TEZ-UI : Add link to view AM log of finished & running apps
  TEZ-2874. Improved logging for caller context.
  TEZ-2781. Fallback to send only TaskAttemptFailedEvent if taskFailed heartbeat fails
  TEZ-2868. Fix setting Caller Context in Tez Examples.
  TEZ-2860. NPE in DAGClientImpl.
  TEZ-2855. Fix a potential NPE while routing VertexManager events.
  TEZ-2758. Remove append API in RecoveryService after TEZ-1909.
  TEZ-2851. Support a way for upstream applications to pass in a caller context to Tez.
  TEZ-2858. Stop using System.currentTimeMillis in TestInputReadyTracker.
  TEZ-2857. Fix flakey tests in TestDAGImpl.
  TEZ-2398. Flaky test: TestFaultTolerance
  TEZ-2808. Race condition between preemption and container assignment
  TEZ-2853. Tez UI: task attempt page is coming empty
  TEZ-2716. DefaultSorter.isRleNeeded not thread safe
  TEZ-2847. Tez UI: Task details doesn't gets updated on manual refresh after job complete
  TEZ-2844. Backport TEZ-2775 to branch-0.7. Improve and consolidate logging in Runtime components.
  TEZ-2843. Tez UI: Show error if in progress fails due to AM not reachable
  TEZ-2842. Tez UI: Update Tez App details page while in-progress
  TEZ-2834. Make Tez preemption resilient to incorrect free resource reported
  by YARN
  TEZ-2812. Preemption sometimes does not respect heartbeats between preemptions
  TEZ-2097. TEZ-UI Add dag logs backend support
  TEZ-814.  Improve heuristic for determining a task has failed outputs
  TEZ-2830. Backport TEZ-2774 to branch-0.7. Improvements to logging in the AM and part of the runtime.
  TEZ-2829. Tez UI: minor fixes to in-progress update of UI from AM