@@ -186,7 +186,7 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     this.initializerExecutor = Executors.newFixedThreadPool(
         numInitializers,
         new ThreadFactoryBuilder().setDaemon(true)
-            .setNameFormat("Initializer %d").build());
+            .setNameFormat("I/O Setup %d").build());
     this.initializerCompletionService = new ExecutorCompletionService<Void>(
         this.initializerExecutor);
     this.groupInputSpecs = taskSpec.getGroupInputs();
@@ -406,7 +406,7 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     protected Void callInternal() throws Exception {
       String oldThreadName = Thread.currentThread().getName();
       try {
-        Thread.currentThread().setName(oldThreadName + "{" + inputSpec.getSourceVertexName() + "}");
+        Thread.currentThread().setName(oldThreadName + " Initialize: {" + inputSpec.getSourceVertexName() + "}");
         return _callInternal();
       } finally {
         Thread.currentThread().setName(oldThreadName);
@@ -414,7 +414,6 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     }
 
     protected Void _callInternal() throws Exception {
-
       if (LOG.isDebugEnabled()) {
         LOG.debug("Initializing Input using InputSpec: " + inputSpec);
       }
@@ -458,7 +457,6 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     }
 
     protected Void _callInternal() throws Exception {
-      Thread.currentThread().setName("InitializerStart {" + srcVertexName + "}");
       if (LOG.isDebugEnabled()) {
         LOG.debug("Starting Input with src edge: " + srcVertexName);
       }
@@ -483,7 +481,7 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     protected Void callInternal() throws Exception {
       String oldThreadName = Thread.currentThread().getName();
       try {
-        Thread.currentThread().setName(oldThreadName + "{" + outputSpec.getDestinationVertexName() + "}");
+        Thread.currentThread().setName(oldThreadName + " Initialize: {" + outputSpec.getDestinationVertexName() + "}");
         return _callInternal();
       } finally {
         Thread.currentThread().setName(oldThreadName);
@@ -491,7 +489,6 @@ public class LogicalIOProcessorRuntimeTask extends RuntimeTask {
     }
 
     protected Void _callInternal() throws Exception {
-      Thread.currentThread().setName("Initializer {" + outputSpec.getDestinationVertexName() + "}");
       if (LOG.isDebugEnabled()) {
         LOG.debug("Initializing Output using OutputSpec: " + outputSpec);
       }
